# coddy

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  go.mod  pyproject.toml  requirements-dev.txt  requirements.txt
cmd/coddy/: main.go
cmd/server/: main.go
docker/: Dockerfile  entrypoint.sh
internal/api/: doc.go  files.go  handlers.go  handlers_test.go  messages.go  middleware.go  routes.go  websocket.go
internal/config/: config.go  config_test.go
internal/llm/: client.go  client_test.go
internal/orchestrator/: orchestrator.go  orchestrator_test.go  session_orchestrator.go
internal/sandbox/: docker.go  docker_impl.go.reference  docker_test.go  helpers.go  sandbox.go  subprocess.go  subprocess_test.go
internal/session/: cleanup.go  store.go  store_test.go
internal/tools/: definitions.go  definitions_test.go  tools_test.go
pkg/models/: models.go  models_test.go
src/coddy/: __init__.py  __main__.py  config.py
src/coddy/api/: __init__.py
src/coddy/llm/: __init__.py  client.py
src/coddy/orchestrator/: __init__.py  core.py  session.py
src/coddy/prompts/: system.txt
src/coddy/sandbox/: __init__.py  base.py
src/coddy/tools/: __init__.py  definitions.py  registry.py
tests/: __init__.py  test_config.py  test_sandbox_base.py  test_session.py  test_tools.py
